bin/testsuite/tests/compiler/src/errors/compiler2686.swg
#global testerror "Err0310"

#[Swag.Complete]
func toto() {}
